--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-rating": "^2.0.5",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.3.1",
+    "react-stars": "^2.2.5",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
